syntax = "proto3";

package talk_cloud;

import "talk_cloud_model.proto"; // 一些公用的model

service WebIPsService {
    /*************************************** WebIPs start **************************************/
    // 通知调度员和设备去从新获取ips
    rpc NotifyIpsChanged (NotifyIpsChangedReq) returns (NotifyIpsChangedResp) {
    };
    /*************************************** WebIPs end **************************************/
}

/************************** notify start ***************************/
// 查询某个调度员名下的tag信息请求数据
message NotifyIpsChangedReq {
    // 调度员的Id
    int32 accountId = 1;
}

// 查询Tags信息返回的数据
message NotifyIpsChangedResp {
    // 查询调度员名下所有的Tags信息
    Result Res = 1;
}
/************************** notify end ***************************/